Closed
Bug 945634
Opened 11 years ago
Closed 11 years ago
Async zooming of fixed position, aligned content has regressed
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
RESOLVED
FIXED
mozilla29
Tracking | Status | |
---|---|---|
firefox27 | --- | unaffected |
firefox28 | + | fixed |
firefox29 | --- | fixed |
People
(Reporter: cwiiis, Assigned: roc)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
6.05 KB,
patch
|
mattwoodrow
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
It looks like the transform applied to fixed position content anchored to the bottom, right and/or top is applied twice now, as can be seen when zooming in at the given URL.
This seems to be a regression from either the fix in bug 941050 or bug 919144. Or maybe from some other bug (but I tested it prior to bug 919144 landing, and it was working then).
Let's track this, it makes async zooming of fixed content feel very weird/broken. I've only tested on Android, but this likely affects b2g and Metro too.
Updated•11 years ago
|
Updated•11 years ago
|
status-firefox27:
--- → unaffected
Comment 1•11 years ago
|
||
roc, looks like some significant user impact regression. Can you look into this or assign someone to with possible backout?
Flags: needinfo?(roc)
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → roc
Flags: needinfo?(roc)
Assignee | ||
Comment 2•11 years ago
|
||
I do not see this on my Nexus S on trunk.
I see what looks like a bug involving the vertical position of the pink div when I'm scrolling up. It's unrelated to zooming in. Everything else looks OK.
Did this get fixed by something else?
Assignee | ||
Comment 3•11 years ago
|
||
Er, scrub that. I think I was testing the wrong build.
Assignee | ||
Comment 4•11 years ago
|
||
I think the problem is that anchor computation is busted.
Assignee | ||
Comment 5•11 years ago
|
||
Attachment #8346320 -
Flags: review?(matt.woodrow)
Assignee | ||
Comment 6•11 years ago
|
||
The anchor point is in the layer's coordinate system, whose 0,0 is the top-left of the fixed-pos frame.
Updated•11 years ago
|
Attachment #8346320 -
Flags: review?(matt.woodrow) → review+
Assignee | ||
Comment 7•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Assignee | ||
Comment 9•11 years ago
|
||
Comment on attachment 8346320 [details] [diff] [review]
fix
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 919144
User impact if declined: broken fixed-pos elements when zooming on mobile
Testing completed (on m-c, etc.): a little manual testing
Risk to taking this patch (and alternatives if risky): very low risk
String or IDL/UUID changes made by this patch: none
Attachment #8346320 -
Flags: approval-mozilla-aurora?
Updated•11 years ago
|
Attachment #8346320 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•11 years ago
|
||
status-firefox29:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•